# NexusMcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FINAL_ENHANCED_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEXUS_MCP_MASTER_DOCUMENT.md  README.md  setup.py
.github/workflows/: ci.yml
examples/: claude_desktop_config.json
src/: lib.rs  main.rs
src/agent/: mod.rs
src/engine/: mod.rs  obscura_bridge.rs  session.rs
src/extraction/: mod.rs
src/hidden_gems/: crawl4ai.rs  firecrawl_extraction.rs  mod.rs  stagehand.rs  stealth.rs  trafilatura.rs  vector_memory.rs
src/mcp/: http_server.rs  mod.rs  server.rs
src/mcp/tools/: agent_superpowers.rs  enterprise.rs  error_recovery.rs  extraction.rs  hidden_gem_tools.rs  mod.rs  navigation.rs  profile_persistence.rs  research.rs  session.rs  stealth.rs
src/observability/: mod.rs
src/session/: mod.rs  profile.rs
tests/: integration_tests.rs
